# flashare

./: .gitignore  DOCS.md  INSTALL.md  Makefile  PHASE_1_SETUP.md  README.md  go.mod  go.sum  install.ps1  install.sh  pyproject.toml  readme.md
.github/workflows/: release.yml
internal/cli/: cli.go
internal/qr/: qr.go
internal/server/: server.go
internal/server/static/: index.html
internal/tui/: tui.go
src/flashare/: __init__.py  __main__.py  config.py  server.py
src/flashare/api/: __init__.py  routes.py
src/flashare/cli/: __init__.py  fzf.py  main.py  ui.py
src/flashare/core/: __init__.py  ble.py  compression.py  ffmpeg.py  network.py  qr.py
src/flashare/static/: app.js  index.html  styles.css
