[project]
name = "flashare"
version = "0.1.0"
description = "CLI-First Hybrid File Sharing Tool with FastAPI backend, BLE connectivity, and mobile web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "bleak",
    "qrcode[pil]",
    "zstandard",
    "python-multipart",
    "rich",
    "aiofiles",
]

[project.scripts]
share = "flashare.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flashare"]
